--- a/Anna Bella/css/style.css
+++ b/Anna Bella/css/style.css
@@ -23,6 +23,7 @@ nav {
 nav > a {
     text-decoration: none;
     color: rgba(7, 7, 126, 0.801);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 footer {
